# dagster-ETL

./: .env.example  .gitignore  dagster-prod.yaml  dagster.yaml  pyproject.toml  workspace.yaml
.claude/: CLAUDE.md  settings.json
.claude/agents/: code-standards-enforcer.md  etl-expert.md
.claude/commands/: add_pipeline.md  add_tenant.md  dg_troubleshoot_run.md  enforce_standards.md  gh_issue_solve.md  write_pr_summary.md
docker/: Dockerfile  docker-compose.yml
docker/init-scripts/: 01_create_tables.sql
docker/trino/catalog/: postgresql.properties  source.properties
docs/: PRD_dagster_ETL.md  WORK_LOG.md  trino_observability_ddl.sql
etl/: __init__.py  all.py  default.py  project_01.py  project_02.py
etl/assets/: __init__.py  extract.py  load.py  transform.py
etl/common/: __init__.py
etl/common/assets/: __init__.py  extract.py  load.py  transfer.py  transform.py
etl/config/: __init__.py  config_loader.py  tenant_config.py  tenant_loader.py
etl/factories/: __init__.py  asset_factory.py  dbt_factory.py  job_factory.py  resource_factory.py  schedule_factory.py
etl/hooks/: __init__.py  etl_hooks.py
etl/jobs/: __init__.py  daily_job.py
etl/partitions/: __init__.py  daily.py
etl/resources/: __init__.py  rdb.py  s3.py  trino.py
etl/sensors/: __init__.py  run_log_sensor.py
etl/tenants/: _template.yaml  tenant_default.yaml
etl/tenants/_template/: __init__.py  config.yaml
etl/tenants/_template/assets/: __init__.py  transfer.py  transform.py
etl/tenants/_template/dbt/: dbt_project.yml  profiles.yml
etl/tenants/default/: __init__.py  config.yaml
etl/tenants/project_01/: __init__.py  config.yaml
etl/tenants/project_01/assets/: __init__.py  transfer.py  transform.py
etl/tenants/project_01/dbt/: dbt_project.yml  profiles.yml
etl/tenants/project_02/: __init__.py  config.yaml
etl/utils/: __init__.py  logging.py  observability.py  parquet.py  validation.py
(+10 files in other folders)
