[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dagster-etl"
version = "0.1.0"
description = "Dagster 기반 ETL 파이프라인 - RDB → Transform → Trino → PostgreSQL"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # Dagster Core
    "dagster>=1.6.0",
    "dagster-webserver>=1.6.0",

    # Database Connections
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "trino>=0.327.0",

    # Data Processing
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",

    # S3/Cloud Storage
    "boto3>=1.34.0",
    "s3fs>=2024.2.0",

    # dbt Integration
    "dagster-dbt>=0.22.0",
    "dbt-postgres>=1.7.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

local = [
    # MinIO for local S3 emulation
    "minio>=7.2.0",
]

[project.entry-points."dagster"]
etl = "etl"

[tool.setuptools.packages.find]
where = ["."]
include = ["etl*"]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=etl --cov-report=term-missing"
